gl33-master/src/test/deca/context/invalid/other/affectation_boolean_float.deca
// Invalid test
// Affectation d'un boolean à un flottant

{
   float x;
   boolean b;

   x = b;
   x = true;
   x = false;
}
